update mail info

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Petanque</title>
+  <title>Petanque-4parties</title>
   <base href="./">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1"
+        name="description" content="Outil de gestion d'un concours de pétanques en 4 parties. Cet outil est gratuit. Amusez-vous bien" >
   <link rel="icon" type="image/x-icon" href="assets/logo_Vitsik@.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
